added refresh button
Please find

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>👦 Aiman & Aisha  👧</title>
     </head>
     <body style="background-color: gray;">
         <h1 style="text-align: center;color:lightcoral;font-size: 5em;">Refresh ME</h1>
@@ -18,7 +18,11 @@
         <h2 style="color:lightcoral;">AIMAN</h2>
             <img id="player2" src="./images/dice6.png"/>
         </div>
-        
+<div style="text-align: center;">
+        <button style="    width: 25%;
+        height: 54%;
+        background-color:#d5fb0587;padding: 3%;" onclick="window.location.reload()">REFRESH</button>
+</div>        
         <script src="index.js"></script>
     </body>
 </html>
